[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/C64_font_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameUI/LevelUp.gd" type="Script" id=2]
[ext_resource path="res://GameUI/UpgradeChoice.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/C64_font_medium.tres" type="DynamicFont" id=4]

[node name="LevelUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Border" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 824.0
margin_bottom = 500.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 208.0
margin_top = 108.0
margin_right = 816.0
margin_bottom = 492.0

[node name="LevelUpLabel" type="Label" parent="."]
margin_top = 120.0
margin_right = 1024.0
custom_fonts/font = ExtResource( 1 )
text = "Level UP!"
align = 1

[node name="LevelUpLabel2" type="Label" parent="."]
margin_top = 160.0
margin_right = 1024.0
custom_fonts/font = ExtResource( 4 )
text = "Select one upgrade."
align = 1

[node name="Upgrade1" parent="." instance=ExtResource( 3 )]
margin_left = 300.0
margin_top = 225.0
margin_right = 0.0
margin_bottom = 0.0
number = 1

[node name="Upgrade2" parent="." instance=ExtResource( 3 )]
margin_left = 300.0
margin_top = 300.0
margin_right = 0.0
margin_bottom = 0.0
number = 2

[node name="Upgrade3" parent="." instance=ExtResource( 3 )]
margin_left = 300.0
margin_top = 375.0
margin_right = 0.0
margin_bottom = 0.0
number = 3

[connection signal="pressed" from="Upgrade1" to="." method="_on_Upgrade_chosen"]
[connection signal="pressed" from="Upgrade2" to="." method="_on_Upgrade_chosen"]
[connection signal="pressed" from="Upgrade3" to="." method="_on_Upgrade_chosen"]
